# diesel-oci

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml  wait-for-oralce.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.travis/ora/: buildDocker.sh  wget_12c.sh
.travis/oracle/: download.js
oci-sys/: Cargo.toml  build.rs
oci-sys/src/: lib.rs
src/: lib.rs  logger.rs
src/oracle/: backend.rs  clause_impl.rs  insertable.rs  mod.rs  query_builder.rs
src/oracle/connection/: bind_collector.rs  bind_context.rs  create_migration_table.sql  cursor.rs  define_create_if_not_exists.sql  mod.rs  oracle_value.rs  raw.rs  row.rs  stmt.rs  stmt_iter.rs  transaction.rs
src/oracle/query_builder/: alias.rs  exists.rs  limit_clause.rs  limit_offset.rs  mod.rs  returning.rs  select_statement.rs  subselect.rs
src/oracle/query_builder/insert_statement/: mod.rs
src/oracle/query_dsl/: mod.rs  returning.rs  save_changes_dsl.rs
src/oracle/types/: chrono_date_time.rs  decimal.rs  integers.rs  interval.rs  mod.rs  primitives.rs
src/test/: dynamic_select.rs  mod.rs
