[package]
authors = [
    "Georg Semmler <georg.semmler@giga-infosystems.com>",
    "Paul Gabriel <paul.gabriel@giga-infosystems.com>",
    "Daniel Buse <daniel.buse@giga-infosystems.com>",
]
name = "diesel-oci"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A oci database adapter for diesel"
readme = "README.md"
keywords = ["diesel", "oci", "oracle", "sql"]
categories = ["database"]

[workspace]
members = ["oci-sys"]

[dependencies]
byteorder = "1"
libc = "0.2"
log = "0.3"

[dependencies.chrono-time]
optional = true
version = "0.4"
package = "chrono"

[dependencies.diesel]
default-features = false
features = ["with-deprecated", "unstable"]
git = "https://github.com/diesel-rs/diesel"
rev = "ee00374f79d865e9d464517d603d0ed22d12be0d"


[dependencies.diesel-dynamic-schema]
optional = true
default-features = false
git = "https://github.com/diesel-rs/diesel"
rev = "ee00374f79d865e9d464517d603d0ed22d12be0d"

[dependencies.oci-sys]
path = "oci-sys"

[dev-dependencies]
dotenv = ">=0.8, <0.11"
num = { version = "0.1", default-features = false }
num-derive = "0.1"

[features]
default = ["chrono", "r2d2", "dynamic-schema"]
chrono = ["chrono-time", "diesel/chrono"]
r2d2 = ["diesel/r2d2"]
dynamic-schema = ["diesel-dynamic-schema"]
gst = []
