[package]
authors = [
    "Georg Semmler <georg.semmler@giga-infosystems.com>",
    "Paul Gabriel <paul.gabriel@giga-infosystems.com>",
    "Daniel Buse <daniel.buse@giga-infosystems.com>",
]
name = "diesel-oci"
version = "0.3.0"
license = "MIT OR Apache-2.0"
description = "A oci database adapter for diesel"
readme = "README.md"
keywords = ["diesel", "oci", "oracle", "sql"]
categories = ["database"]
edition = "2021"
repository = "https://github.com/GiGainfosystems/diesel-oci/"
documentation = "https://docs.rs/diesel-oci"

[dependencies]
oracle = {version = "0.6.0", features = ["chrono"]}
url = "2"
percent-encoding = "2"

[dependencies.chrono-time]
optional = true
default-features = false
version = "0.4"
package = "chrono"

[dependencies.diesel]
default-features = false
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
version = "~2.2.0"

[dependencies.diesel_derives]
version = "~2.2.0"

[dependencies.diesel-dynamic-schema]
optional = true
default-features = false
version = "0.2.1"

[dev-dependencies]
log = "0.4"
dotenvy = "0.15"
num = { version = "0.4", default-features = false }
num-derive = "0.3"
num-traits = "0.2"

[features]
default = ["chrono", "r2d2", "dynamic-schema"]
chrono = ["chrono-time", "diesel/chrono"]
r2d2 = ["diesel/r2d2"]
dynamic-schema = ["diesel-dynamic-schema"]
gst = []

